# vanilc

./: CMakeLists.txt  config.yml  license.txt  readme.txt
configs/: config_3d.yml  config_efficient_3d.yml  config_fast.yml  config_mean.yml  config_med.yml  config_medical.yml  config_nlm.yml
include/: vanilcArithmeticCoder.h  vanilcCoder.h  vanilcComputer.h  vanilcConfig.h  vanilcContext.h  vanilcCroppedCorrelationWeightingFunction.h  vanilcCroppedPriorizedSSDWeightingFunction.h  vanilcDefinitions.h  vanilcDistributionFunction.h  vanilcDistributionMaker.h  vanilcEntropyCoder.h  vanilcExponentialSADWeightingFunction.h  vanilcExponentialSSDWeightingFunction.h  vanilcExponentialVarianceComputer.h  vanilcFastLSPredictor.h  vanilcGenericDistributionCoder.h  vanilcIdentityWeightingFunction.h  vanilcInversePriorizedSQDWeightingFunction.h  vanilcInversePriorizedSSDWeightingFunction.h  vanilcLSPredictor.h  vanilcLaplaceDistributionFunction.h  vanilcMEDPredictor.h  vanilcMeanPredictor.h  vanilcNLMPredictor.h  vanilcNormalDistributionFunction.h  vanilcPredictor.h  vanilcPredictorConstructor.h  vanilcRawIO.h  vanilcResidualVarianceComputer.h  vanilcRiceGolombCoder.h  vanilcSparseDistributionFunction.h  vanilcStructuringElement.h  vanilcTDistributionFunction.h  vanilcTimer.h  vanilcUniformDistributionFunction.h  vanilcWeightingFunction.h
src/: vanilc.cpp  vanilcArithmeticCoder.cpp  vanilcCoder.cpp  vanilcConfig.cpp  vanilcContext.cpp  vanilcCroppedCorrelationWeightingFunction.cpp  vanilcCroppedPriorizedSSDWeightingFunction.cpp  vanilcDistributionMaker.cpp  vanilcEntropyCoder.cpp  vanilcExponentialSADWeightingFunction.cpp  vanilcExponentialSSDWeightingFunction.cpp  vanilcFastLSPredictor.cpp  vanilcInversePriorizedSQDWeightingFunction.cpp  vanilcInversePriorizedSSDWeightingFunction.cpp  vanilcLSPredictor.cpp  vanilcMEDPredictor.cpp  vanilcMeanPredictor.cpp  vanilcNLMPredictor.cpp  vanilcPredictorConstructor.cpp  vanilcRawIO.cpp  vanilcRiceGolombCoder.cpp  vanilcSparseDistributionFunction.cpp  vanilcStructuringElement.cpp  vanilcTimer.cpp
