# Copyright (c) 2015 Siemens AG, Author: Andreas Weinlich
#
# Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

cmake_minimum_required(VERSION 2.6)
project(vanilc)

set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build, options are: Debug Release" FORCE)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})

option(VANILC_USE_ATTACHED_BOOST "Use version of the Boost library that is attached to this project in the 3rdParty directory within this source tree" ON)
option(VANILC_USE_ATTACHED_OPENCV "Use version of the OpenCV library that is attached to this project in the 3rdParty directory within this source tree" ON)

if(VANILC_USE_ATTACHED_BOOST)
	include_directories("3rdParty")
else()
	find_package(Boost REQUIRED)
	include_directories(${Boost_INCLUDE_DIR})
endif(VANILC_USE_ATTACHED_BOOST)

if(VANILC_USE_ATTACHED_OPENCV)
	include_directories("3rdParty/opencv/include")
	include_directories("3rdParty/opencv/modules/core/include")
	include_directories("3rdParty/opencv/modules/highgui/include")
	include_directories("3rdParty/opencv/modules/imgproc/include")
	option(BUILD_DOCS "" OFF)
	option(BUILD_JASPER "" ON)
	option(BUILD_JPEG "" OFF)
	option(BUILD_OPENEXR "" OFF)
	option(BUILD_PACKAGE "" OFF)
	option(BUILD_PERF_TESTS "" OFF)
	option(BUILD_PNG "" ON)
	option(BUILD_TESTS "" OFF)
	option(BUILD_TIFF "" ON)
	option(BUILD_ZLIB "" OFF)
	option(BUILD_opencv_apps "" OFF)
	option(BUILD_opencv_calib3d "" OFF)
	option(BUILD_opencv_contrib "" OFF)
	option(BUILD_opencv_core "" ON)
	option(BUILD_opencv_features2d "" OFF)
	option(BUILD_opencv_flann "" OFF)
	option(BUILD_opencv_gpu "" OFF)
	option(BUILD_opencv_highgui "" ON)
	option(BUILD_opencv_imgproc "" ON)
	option(BUILD_opencv_legacy "" OFF)
	option(BUILD_opencv_ml "" OFF)
	option(BUILD_opencv_nonfree "" OFF)
	option(BUILD_opencv_objdetect "" OFF)
	option(BUILD_opencv_ocl "" OFF)
	option(BUILD_opencv_photo "" OFF)
	option(BUILD_opencv_stitching "" OFF)
	option(BUILD_opencv_superres "" OFF)
	option(BUILD_opencv_ts "" OFF)
	option(BUILD_opencv_video "" OFF)
	option(BUILD_opencv_videostab "" OFF)
	option(ENABLE_PRECOMPILED_HEADERS "" OFF)
	option(WITH_1394 "" OFF)
	option(WITH_CUDA "" OFF)
	option(WITH_CUFFT "" OFF)
	option(WITH_DSHOW "" OFF)
	option(WITH_EIGEN "" ON)
	option(WITH_FFMPEG "" OFF)
	option(WITH_GIGEAPI "" OFF)
	option(WITH_GSTREAMER "" OFF)
	option(WITH_JASPER "" ON)
	option(WITH_JPEG "" OFF)
	option(WITH_LIBV4L "" OFF)
	option(WITH_OPENCL "" OFF)
	option(WITH_OPENCLAMDBLAS "" OFF)
	option(WITH_OPENCLAMDFFT "" OFF)
	option(WITH_OPENEXR "" OFF)
	option(WITH_PNG "" ON)
	option(WITH_PVAPI "" OFF)
	option(WITH_TIFF "" ON)
	option(WITH_VFW "" OFF)
	option(WITH_V4L "" OFF)
	add_subdirectory("3rdParty/opencv")
	set(OpenCV_LIBS "opencv_core" "opencv_highgui" "opencv_imgproc")
else()
	find_package( OpenCV REQUIRED )
endif(VANILC_USE_ATTACHED_OPENCV)

file(GLOB srcs "src/*.cpp")
include_directories("include")

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
add_executable(vanilc ${srcs})
target_link_libraries(vanilc ${OpenCV_LIBS})

